improvement : fix layout for button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,8 +32,7 @@ export const prerender = true;
           </h1>
           <div class="flex w-full justify-center">
             <a href="/party">
-              <button
-                class="rounded-md bg-pink-700 w-[200px] ml-12 text-white p-2"
+              <button class="rounded-md bg-pink-700 w-[200px] text-white p-2"
                 >Buka Undangan</button
               ></a
             >
